--- a/html-assignment-1/aboutme.html
+++ b/html-assignment-1/aboutme.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Suraj Sukhiya</title>
-    </head>
-    <body>
-        <h1>About Me</h1>
-        <br>
-        <p>
-            I am also a human name Suraj Sukhiya From West part of India, let me Start from Being Honest I never wanted to do studies like every other child but somehow, I was always fascinated about Technology around me, always like to try 
-            out tings and do experiments and learn about them so Computers Became my Primary source of Entertainment and Focus for rest of my life. Apart from This Since Childhood I Started knowing the things about after life and spirituality 
-            which is everything in my life now.
-        </p>
-        <p>
-            When I was 10, I stated going on this path which has helped me significantly at each and every point in our life I guess not just that I love traveling and Filming a lot. I can Proudly say that I have Seen 80% of India through my 
-            own eyes and know about 4-5 different Indian languages and Culture, also since last year I started making vlogs so that I can make my memories and share my journey with other people. And that’s my Dream too, travel as much as possible
-             and be a good content creator and be stress free and successful. Success without hurting someone (Karma is Watching) so when the time comes, we can leave Happily.
-        </p>
-        <h2>"Spirituality and Self Confidence are two ingredients towards a good life, Which I Believe is essence of Human life"-<strong>Suraj Sukhiya</strong></h2>
-        <p></p>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Suraj Sukhiya</title>
+</head>
+
+<body>
+    <article>
+        <section>
+            <h1>About Me</h1>
+        </section>
+         <br>
+         <section>
+            <p>
+                I am also a human name Suraj Sukhiya From West part of India, let me Start from Being Honest I never wanted
+                to do studies like every other child but somehow, I was always fascinated about Technology around me, always
+                like to try
+                out tings and do experiments and learn about them so Computers Became my Primary source of Entertainment and
+                Focus for rest of my life. Apart from This Since Childhood I Started knowing the things about after life and
+                spirituality
+                which is everything in my life now.
+            </p>
+        </section>
+        <section>
+            <p>
+                When I was 10, I stated going on this path which has helped me significantly at each and every point in our
+                life I guess not just that I love traveling and Filming a lot. I can Proudly say that I have Seen 80% of
+                India through my
+                own eyes and know about 4-5 different Indian languages and Culture, also since last year I started making
+                vlogs so that I can make my memories and share my journey with other people. And that’s my Dream too, travel
+                as much as possible
+                and be a good content creator and be stress free and successful. Success without hurting someone (Karma is
+                Watching) so when the time comes, we can leave Happily.
+            </p>
+        </section>
+        <section>
+            <h2>"Spirituality and Self Confidence are two ingredients towards a good life, Which I Believe is essence of
+                Human life"-<strong>Suraj Sukhiya</strong></h2>
+        </section>
+    </article>
+</body>
+
 </html>
