--- a/html-assignment-1/aboutme.html
+++ b/html-assignment-1/aboutme.html
@@ -40,6 +40,12 @@
                 Human life"-<strong>Suraj Sukhiya</strong></h2>
         </section>
     </article>
+    <footer>
+        contact me<br>  
+        Email:<i>sukhiyasuraj@gmail.com</i>
+        <br>
+        <span>&copy;</span>2021 Suraj Sukhiya
+    </footer>
 </body>
 
 </html>
