--- a/html-assignment-1/aboutme.html
+++ b/html-assignment-1/aboutme.html
@@ -42,7 +42,7 @@
     </article>
     <footer>
         contact me<br>  
-        Email:<i>sukhiyasuraj@gmail.com</i>
+        Email:<href><i>sukhiyasuraj@gmail.com</i></href>
         <br>
         <span>&copy;</span>2021 Suraj Sukhiya
     </footer>
