Contact details and Quote added

--- a/html-assignment-1/aboutme.html
+++ b/html-assignment-1/aboutme.html
@@ -36,12 +36,12 @@
             </p>
         </section>
         <section>
-            <h2>"Spirituality and Self Confidence are two ingredients towards a good life, Which I Believe is essence of
-                Human life"-<strong>Suraj Sukhiya</strong></h2>
+            <blockquote>"Spirituality and Self Confidence are two ingredients towards a good life, Which I Believe is essence of
+                Human life"-<cite>Suraj Sukhiya</cite></blockquote>
         </section>
     </article>
     <footer>
-        contact me<br>  
+        contact Details<br>  
         Email:<href><i>sukhiyasuraj@gmail.com</i></href>
         <br>
         <span>&copy;</span>2021 Suraj Sukhiya
