--- a/week-3/index.html
+++ b/week-3/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Week-3 HTML Tags and Semantics</title>
+        <title>Reggies's Coffe Shop</title>
     </head>
     <body>
         <!--This the comment -->
+        <header></header>
+        <main></main>
+        <footer></footer>
     </body>
 </html>
