FInal html file

--- a/html-assignment-1/index.html
+++ b/html-assignment-1/index.html
@@ -55,9 +55,9 @@
         
     </main>
     <footer>
-        contact Details<br>
-        <a href="sukhiyasuraj@gmail.com">Mail</a>
-        <a href="sukhiyasuraj@gmail.com">Insatagram</a>
+        Contact Details<br>
+        <a href="sukhiyasuraj@gmail.com">Mail</a><br>
+        <a href="sukhiyasuraj@gmail.com">Insatagram</a><br>
         <a href="sukhiyasuraj@gmail.com">Youtube</a>
          <br>
         <span>&copy;</span>2021 Suraj Sukhiya
