--- a/week-4/index.html
+++ b/week-4/index.html
@@ -11,9 +11,11 @@
    <header>
     <h1>Reggie's Coffee Shop</h1>
     <nav>NAVIGATION</nav>
+    <a href="contact.html">Contact Us</a>
   </header>
   <!-- main content of the page -->
   <main>
+    <a href="#up">up</a>
     <!-- main article -->
     <article>
       <h2>Our Story</h2>
@@ -40,7 +42,7 @@
       <h3>Merchandise</h3>
       <ul>
         <li>T-Shirts</li>
-        <li>Hats</li>
+        <li>Hats</li>>
         <li>Hoodies</li>
       </ul>
     </aside>
@@ -56,7 +58,7 @@
     <section>
       <h3>Treat of the Week</h3>
       <dl>
-        <dt>Name</dt>
+        <dt>Name</dt id="up">
         <dd>Banana Bread</dd>
         <dt>Calories</dt>
         <dd>250</dd>
@@ -75,6 +77,8 @@
           </ul>
         </dd>
       </dl>
+      <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the recipe</a>
+      
     </section>
   </main>
   <!-- *********footer of the page********* -->
