--- a/week-4/contact.html
+++ b/week-4/contact.html
@@ -33,6 +33,15 @@
             <label for="ticket">How many ticket?(sold in pair)</label>
             <input type="number" name="ticket" id="ticket min="2" max="10" step="2">
         </div>
+        <div>
+            <label for="row">Select Row</label>
+            <select name="row" id="row">
+                <option value="Front">Front Row</option>
+                <option value="Center" selected>center Row</option>
+                <option value="Back">Back Row</option>
+                
+            </select>
+        </div>
 
         <button type="submit">Sign up </button>
     
