Notes page created

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,6 +10,8 @@
 
     <header>
         <h1 style="text-align:center">About Me</h1>
+        <img src="images/SUKHIYA_S_1.jpg" alt="My photos">
+        <a href="notes.html">Notes</a>
     </header>
     <hr>
     <main>
