--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,11 +10,11 @@
 
     <header>
         <h1 style="text-align:center">About Me</h1>
-        <img src="images/SUKHIYA_S_1.jpg" alt="My photos">
         <a href="notes.html">Notes</a>
     </header>
     <hr>
     <main>
+        <img src="images/SUKHIYA_S_1.jpg" alt="My photos">
         <article>
             <section>
                 <p>
@@ -54,6 +54,14 @@
                     is essence of
                     Human life"-<cite><em></em>Suraj Sukhiya<em></em></cite></blockquote>
                 
+            </section>
+            <section>
+                <ul>
+                    My hobbies 
+                    <li>Making Videos</li>
+                    <li>Watching Web series</li>
+                    <li>traveling</li>
+                </ul>
             </section>
         </article>
         
