Navigation link added

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -10,6 +10,7 @@
 
     <header>
         <h1 style="text-align:center">Notes</h1>
+        <a href="index.html">Back to Main page</a>
     </header>
     <main>
         <h3>HTML Tags</h3>
@@ -44,6 +45,11 @@
             </dd>
             <dt>Main Tag</dt>
             <dd>The element is used to denote the content of a webpage that relates to the central topic of that page or application. It should include content that is unique to that page and should not include content that is duplicated across multiple webpages, such as headers, footers, and primary navigation elements.
+            </dd>
+            </dd>
+            <dt>Footer Tag</dt>
+            <dd>
+                The footer element is a structural element used to identify the footer of a page, document, article, or section. A footer typically contains copyright and authorship information or navigational elements pertaining to the contents of the parent element.
             </dd>
             
 
