--- a/week-5/index.html
+++ b/week-5/index.html
@@ -4,25 +4,59 @@
 <head>
   <meta charset="UTF-8">
   <title>Reggie's Coffee Shop - Home</title>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
- 
-   <header>
+  <!-- This is a HTML comment -->
+  <!-- command + / adding and removing a comment  -->
+  <!-- tagname + Tab to autocomplete -->
+  <!-- command + right arrow key to jump to end of line -->
+  <!-- alt + up or down arrow keys to move a line of code -->
+  <!-- alt + z for wrapping text to next line  -->
+  <!-- alt + command + down arrow key, for multiple edit points. Escape to get rid of them. -->
+  <!-- tagname*number to get multiple tags. li*5 will give us 5 list items -->
+  <!-- command + A - Select Every thing -->
+  <!-- command + C - Copy -->
+  <!-- command + V - Paste -->
+
+  <!-- inline styles using the style attribute - NOT RECOMMENDED -->
+  <header style="background-color:peru;">
     <h1>Reggie's Coffee Shop</h1>
-    <nav>NAVIGATION</nav>
-    <a href="contact.html">Contact Us</a>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="contact.html">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <!-- main content of the page -->
   <main>
-    <a href="#up">up</a>
+    <!-- 
+      Using pre and code tags
+    <pre>
+      <code>
+        &lt;p&gt;
+          &lt;strong&gt;
+            Hello!
+          &lt;/strong&gt;
+        &lt;/p&gt;
+      </code>
+    </pre>
+    <code>src</code> is an attribute for <code>img</code>img tag 
+    -->
+    <!-- adding an on page link -->
+    <a href="#treatofweek" class="orange-link">Treat of the Week</a>
     <!-- main article -->
     <article>
       <h2>Our Story</h2>
-      <!-- adding image tag in web page -->
-      <img src="images/coffee-shop.jpg" alt="Coffe shope image">
-      <blockquote>
+      <!-- Adding image -->
+      <img src="images/coffee-shop.jpg" alt="coffee cup on top of pile of coffee beans">
+      <blockquote class="large-text">
         We love coffee <cite>- Reggie and Maria</cite>
       </blockquote>
       <p>
@@ -43,7 +77,7 @@
       <h3>Merchandise</h3>
       <ul>
         <li>T-Shirts</li>
-        <li>Hats</li>>
+        <li>Hats</li>
         <li>Hoodies</li>
       </ul>
     </aside>
@@ -56,10 +90,10 @@
       </ol>
     </section>
     <!-- ********Treat of the Week section******** -->
-    <section>
+    <section id="treatofweek">
       <h3>Treat of the Week</h3>
       <dl>
-        <dt>Name</dt id="up">
+        <dt>Name</dt>
         <dd>Banana Bread</dd>
         <dt>Calories</dt>
         <dd>250</dd>
@@ -78,12 +112,40 @@
           </ul>
         </dd>
       </dl>
-      <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the recipe</a>
-      
+      <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank" class="orange-link large-text">Get the Recipe</a>
     </section>
+    <!-- Adding section for menu -->
+    <section>
+      <h3>Menu Specials</h3>
+      <table border>
+        <thead>
+          <tr>
+            <th colspan="2">Items</th>
+            <th rowspan="2">Price</th>
+          </tr>
+          <tr>
+            <th>Name</th>
+            <th>Calories</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Banana Bread</td>
+            <td>250</td>
+            <td>&dollar; 6</td>
+          </tr>
+          <tr>
+            <td>Oatmeal</td>
+            <td>110</td>
+            <td>&dollar; 8</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
   </main>
   <!-- *********footer of the page********* -->
-  <footer>
+  <footer class="site-footer">
     <p>Copyright &copy; Reggie&apos;s Coffee Shop, 2021</p>
   </footer>
 </body>
