image rename to lowercase only

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,7 +14,7 @@
     </header>
     <hr>
     <main>
-        <img src="images/SUKHIYA_S_1.jpg" alt="My photos">
+        <img src="images/su.jpg" alt="My photos">
         <article>
             <section>
                 <p>
