Html Page Styling Done

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Suraj Sukhiya</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
     <header>
-        <h1 style="text-align:center">About Me</h1>
+        <h1 class="site-title">Suraj Sukhiya</h1>
         <a href="notes.html">Notes</a>
     </header>
     <hr>
     <main>
-        <img src="images/su.jpg" alt="My photos">
         <article>
+            <h1 class="site-title">About Me</h1>
+            <img id="my-image" src="images/su.jpg" alt="My photos">
             <section>
+
                 <p>
                     I am also a human name Suraj Sukhiya From West part of India, let me Start from Being Honest I never
                     wanted
@@ -57,8 +60,8 @@
 
             </section>
             <section>
-                <ul>
-                    My hobbies
+                <h4>My hobbies</h4>
+                <ul id="square">
                     <li>Making Videos</li>
                     <li>Watching Web series</li>
                     <li>traveling</li>
