--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Suraj Sukhiya</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
     <header>
-        <h1 style="text-align:center">Notes</h1>
-        <a href="index.html">Back to Main page</a>
-        <hr>
+        <h1 class="site-title">Notes</h1>
+        <a href="index.html">Home</a>
     </header>
     <main>
         <h3>HTML Tags</h3>
