html page styling done no error on validator

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -29,7 +29,7 @@
             <dt>Anchor Tag</dt>
             <dd>The <a> tag defines a hyperlink, which is used to link from one page to another.
 
-                    The most important attribute of the <a> element is the href attribute, which indicates the link's
+                    The most important attribute of the element is the href attribute, which indicates the link's
                         destination.
 
                         By default, links will appear as follows in all browsers:
