Html styling and validation done

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -27,7 +27,7 @@
                 In HTML 5, the declaration is simple:
             </dd>
             <dt>Anchor Tag</dt>
-            <dd>The <a> tag defines a hyperlink, which is used to link from one page to another.
+            <dd>The tag defines a hyperlink, which is used to link from one page to another.
 
                     The most important attribute of the element is the href attribute, which indicates the link's
                         destination.
