Final Code Done Midterm

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
       <img src="./images/lone-starfish-wide.jpg" alt="lone-starfish-wide" width="100%">
-      <div class="centered"><h1><span>Lone Starfish</span></h1></div>
+      <h1><span>Lone Starfish</span></h1>
       <nav class="nav">
         <ul>
           <li><a href="#home">HOME</a></li>
@@ -74,15 +74,14 @@
                     <br>
                 <button type="submit">Send</button>
             </form>
-        </div>
-        
-
-      
+        </div>   
   </main>
   <!-- *********footer of the page********* -->
   <footer>
+    <br>
     <span>&copy;</span>Lone Starfish
   </footer>
+  <br>
 </body>
 
 </html>
