Final Mid-term Submitted

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Lone Starfish</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+  <!-- ******************Header of the Page***************** -->
   <header>
       <img src="./images/lone-starfish-wide.jpg" alt="lone-starfish-wide" width="100%">
       <h1><span>Lone Starfish</span></h1>
@@ -21,7 +21,7 @@
       </nav>
   </header>
   <br>
-  <!-- main content of the page -->
+  <!--************************* main content of the page******************************** -->
   <main>
     <h2>Life of a Starfish</h2>
     <br>
@@ -46,7 +46,7 @@
                 </ul>
         </div>
         <br>
-        <!-- Form Section on the page  -->
+        <!--************************************** Form Section on the page********************************88-->
         <div>
             <h2>Contact to learn More</h2>
             <br>
@@ -76,12 +76,11 @@
             </form>
         </div>   
   </main>
-  <!-- *********footer of the page********* -->
+  <!-- ****************************footer of the page**************************************8-->
   <footer>
     <br>
     <span>&copy;</span>Lone Starfish
   </footer>
   <br>
 </body>
-
 </html>
