Mid-Term Submittion

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -70,8 +70,9 @@
                     <label for="no">No</label>
                     <input type="radio" id="no" name="choice" value="No">
                     <label for="maybe">Maybe</label>
-                    <input type="radio" id="maybe" name="choice" value="maybe">
+                    <input type="radio" id="maybe" name="choice" value="maybe"><br>
                     <br>
+
                 <button type="submit">Send</button>
             </form>
         </div>   
