--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,87 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Lone Starfish</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
   <!-- ******************Header of the Page***************** -->
   <header>
-      <img src="./images/lone-starfish-wide.jpg" alt="lone-starfish-wide" width="100%">
-      <h1><span>Lone Starfish</span></h1>
-      <nav class="nav">
-        <ul>
-          <li><a href="#home">HOME</a></li>
-          <li>|</li>
-          <li><a href="#story">STORY</a></li>
-          <li>|</li>
-          <li><a href="#contact">CONTACT</a></li>
-        </ul>
-      </nav>
+    <img src="./images/lone-starfish-wide.jpg" alt="lone-starfish-wide">
+    <h1><span>Lone Starfish</span></h1>
+    <nav class="nav">
+      <ul>
+        <li><a href="#home">HOME</a></li>
+        <li>|</li>
+        <li><a href="#story">STORY</a></li>
+        <li>|</li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
   </header>
   <br>
   <!--************************* main content of the page******************************** -->
   <main>
-    <h2>Life of a Starfish</h2>
+    <article>
+      <h2>Life of a Starfish</h2>
+      <img class="container_image" src="./images/lone-starfish.jpg" alt="starfish">
+      <p class="container_text">
+        Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver
+        driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish
+        mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon
+        archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose
+        knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel
+        Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio
+        dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail
+        jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow
+        weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead
+        catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole
+        cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish
+        plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth
+        humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false
+        trevally, dottyback.
+      </p>
+      <br>
+      <br>
+    </article>
+    <div class="list">
+      <h2>Facts About Starfish</h2>
+      <br>
+      <ul>
+        <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+        <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+      </ul>
+    </div>
     <br>
-      <article>
-          <section>
-            <img class="container_image" src="./images/lone-starfish.jpg">
-            <p class="container_text"> 
-              Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
-            </p>
-            </section>
-            <br>
-            <br>
-        </article>
-        <div class="list">
-        <h2>Facts About Starfish</h2>
-        <br>
-                <ul>
-                    <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                    <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-                    <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                    <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-                </ul>
+    <!--************************************** Form Section on the page********************************88-->
+    <div>
+      <h2>Contact to learn More</h2>
+      <br>
+      <form class="formcss" action="thanks.html" method="POST">
+        <label for="fullname">Your Name</label><br>
+        <input type="text" id="fullname" name="fullname"><br>
+        <div>
+          <label for="youremail">Your Email</label><br>
+          <input type="email" id="youremail" name="youremail"><br>
+        </div>
+        <div>
+          <label for="message">Your Message</label><br>
+          <textarea name="message" id="message"></textarea><br>
         </div>
         <br>
-        <!--************************************** Form Section on the page********************************88-->
-        <div>
-            <h2>Contact to learn More</h2>
-            <br>
-            <form class="formcss" action="thanks.html" method="POST">
-                <label for="fullname">Your Name</label><br>
-                <input type="text" id="fullname" name="fullname"><br>
-                <div>
-                    <label for="youremail">Your Email</label><br>
-                    <input type="email" id="youremail" name="youremail"><br>
-                </div>
-                <div>
-                    <label for="message">Your Message</label><br>
-                    <textarea name="message" id="message"></textarea><br>
-                </div> 
-                <br>
-                <div>
-                    <label for="vist">Would you like to vist the Starfish?</label><br>
-                    <br>
-                    <label for="male">Yes</label>
-                    <input type="radio" id="yes" name="choice" value="yes">
-                    <label for="no">No</label>
-                    <input type="radio" id="no" name="choice" value="No">
-                    <label for="maybe">Maybe</label>
-                    <input type="radio" id="maybe" name="choice" value="maybe"><br>
-                    <br>
+        <div>Would you like to vist the Starfish?</div>
+        <br>
+        <label for="yes">Yes</label>
+        <input type="radio" id="yes" name="choice" value="yes">
+        <label for="no">No</label>
+        <input type="radio" id="no" name="choice" value="No">
+        <label for="maybe">Maybe</label>
+        <input type="radio" id="maybe" name="choice" value="maybe"><br>
+        <br>
 
-                <button type="submit">Send</button>
-            </form>
-        </div>   
+        <input type="button" value="Send">
+      </form>
+    </div>
   </main>
   <!-- ****************************footer of the page**************************************8-->
-  <footer>
-    <br>
-    <span>&copy;</span>Lone Starfish
-  </footer>
-  <br>
-</body>
-</html>
