--- a/final-project/html/index.html
+++ b/final-project/html/index.html
@@ -137,15 +137,33 @@
             </div>
             <div>
                 <h3>Location </h3>
-                <img src="../images/" alt="">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11523.329044810973!2d-79.23950986387707!3d43.77634066587426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4d05864b5976f%3A0x8144b23c7dd0d657!2sPanchvati%20Supermarket!5e0!3m2!1sen!2sca!4v1617642469708!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div>
                 <h3>House Of Operation</h3>
+                <table style="width:100%" border="solid">
+                    <tr>
+                      <th>Days</th>
+                      <th>Hours</th>
+                    </tr>
+                    <tr>
+                      <td>Monday-Friday</td>
+                      <td>Saturday-Sunday</td>
+                    </tr>
+                    <tr>
+                      <td>9am-6pm</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
             </div>
 
         </div>
     </main>
-
+    <footer>
+        &copy Copyright Three Star Media
+        <br>
+        All images are taken from unsplash  
     </footer>
+    
 </body>
 </html>
