--- a/final-project/html/index.html
+++ b/final-project/html/index.html
@@ -11,11 +11,11 @@
     <nav>
         <img src="../images/logo.png" alt="logo">
         <ul>
-            <li><a href="#home"></a>Home</li>
-            <li><a href="#aboutus"></a>About us</li>
-            <li><a href="#services"></a>Services</li>
-            <li><a href="#team"></a>Team</li>
-            <li><a href="#contact"></a>Contact</li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#aboutus">About us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <form action="">
             <input type="text" placeholder="Search.." name="search">
@@ -158,6 +158,7 @@
             </div>
 
         </div>
+        <br>
     </main>
     <footer>
         &copy Copyright Three Star Media
