--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Final-Project</title>
 </head>
 <body>
     <nav>
-        <img src="../images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo">
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#aboutus">About us</a></li>
@@ -23,7 +23,7 @@
           </form>
     </nav>
     <main>
-        <img src="../images/main-banner.jpg" alt="main-banner">
+        <img src="images/main-banner.jpg" alt="main-banner">
         <h1>Welcome to Three</h1>
         <h1>Star Media</h1>
         <p>
@@ -34,7 +34,7 @@
             <button type="submit">Connect with us</i></button>
         </form>
         <h1>About Us</h1>
-        <img src="../images/about-us.jpg" alt="about-us">
+        <img src="images/about-us.jpg" alt="about-us">
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit omnis quas neque porro laborum eos voluptatum quod error cupiditate corporis voluptatem a amet, alias eligendi inventore ratione sit praesentium pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatibus temporibus voluptas, voluptate labore ab commodi necessitatibus eos nisi ipsa fugit sapiente alias tempore sit nobis harum, aperiam nam voluptatem.
         </p>
@@ -46,7 +46,7 @@
         <br>
         <div>
             <div>
-                <img src="../images/digital.jpg" alt="digital">
+                <img src="images/digital.jpg" alt="digital">
                 <h3>Digital Transformation</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque saepe at nihil tempore explicabo ipsa distinctio provident ipsum officia quod, iure debitis suscipit neque maiores ratione totam nostrum? Placeat, ex.</p>
                 <form action="mainpage">
@@ -54,7 +54,7 @@
                 </form>
             </div>
             <div>
-                <img src="../images/marketing.jpg" alt="marketing">
+                <img src="images/marketing.jpg" alt="marketing">
                 <h3>Marketing</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque saepe at nihil tempore explicabo ipsa distinctio provident ipsum officia quod, iure debitis suscipit neque maiores ratione totam nostrum? Placeat, ex.</p>
                 <form action="mainpage">
@@ -62,7 +62,7 @@
                 </form>
             </div>
             <div>
-                <img src="../images/video.jpg" alt="digital">
+                <img src="images/digital.jpg" alt="digital">
                 <h3>Video Production</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque saepe at nihil tempore explicabo ipsa distinctio provident ipsum officia quod, iure debitis suscipit neque maiores ratione totam nostrum? Placeat, ex.</p>
                 <form action="mainpage">
@@ -70,7 +70,7 @@
                 </form>
             </div>
             <div>
-                <img src="../images/web.jpg" alt="WebDevlopment">
+                <img src="images/web.jpg" alt="WebDevlopment">
                 <h3>Web Devlopment</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque saepe at nihil tempore explicabo ipsa distinctio provident ipsum officia quod, iure debitis suscipit neque maiores ratione totam nostrum? Placeat, ex.</p>
                 <form action="mainpage">
@@ -78,7 +78,7 @@
                 </form>
             </div>
             <div>
-                <img src="../images/print.jpg" alt="WebDevlopment">
+                <img src="images/print.jpg" alt="WebDevlopment">
                 <h3>Print</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque saepe at nihil tempore explicabo ipsa distinctio provident ipsum officia quod, iure debitis suscipit neque maiores ratione totam nostrum? Placeat, ex.</p>
                 <form action="mainpage">
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div>
-            <img src="../images/vision.jpg" alt="Our vision">
+            <img src="images/vision.jpg" alt="Our vision">
             <h3>Our Vision</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cum, totam nam sit cupiditate optio perspiciatis nihil explicabo pariatur minima vero dolores nemo nulla ad culpa, magnam beatae et alias!</p>
             <form action="mainpage">
@@ -96,10 +96,10 @@
         </div>
         <div>
             <div>
-                <img src="../images/bob.jpg" alt="bob">
+                <img src="images/bob.jpg" alt="bob">
             </div>
             <div>
-                <img src="../images/john.jpg" alt="John">
+                <img src="images/john.jpg" alt="John">
             </div>
             
             <div>
