--- a/final-project/index.html
+++ b/final-project/index.html
@@ -8,31 +8,38 @@
     <title>Final-Project</title>
 </head>
 <body>
+    <header>
     <nav>
-        <img src="images/logo.png" alt="logo">
         <ul>
+            <li><img src="images/logo.png" alt="logo"></li>
             <li><a href="#home">Home</a></li>
             <li><a href="#aboutus">About us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><form action="">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit">Search</i></button>
+              </form>
+            </li>
         </ul>
-        <form action="">
-            <input type="text" placeholder="Search.." name="search">
-            <button type="submit">Search</i></button>
-          </form>
     </nav>
+    </header>
     <main>
-        <img src="images/main-banner.jpg" alt="main-banner">
+        <div > 
+        <img src="images/main-banner.jpg" alt="main-banner" class="headimg">
+        </div>
+        <div class="headimgtext">
         <h1>Welcome to Three</h1>
         <h1>Star Media</h1>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est harum laudantium eos tempora explicabo iste ratione quod nam perspiciatis consequuntur beatae fuga quos facere, ipsam aspernatur, culpa cum temporibus nobis.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repellat quaerat aliquid cupiditate qui, in praesentium sequi repellendus hic illo soluta rem minima, omnis nihil corporis quibusdam quis assumenda doloremque?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est harum laudantium eos tempora explicabo iste ratione quod nam perspiciatis consequuntur beatae fuga quos facere, ipsam aspernatur.
         </p>
         <br>
         <form action="mainpage">
             <button type="submit">Connect with us</i></button>
         </form>
+        </div>
         <h1>About Us</h1>
         <img src="images/about-us.jpg" alt="about-us">
         <p>
