--- a/final-project/index.html
+++ b/final-project/index.html
@@ -10,34 +10,38 @@
 <body>
     <header>
     <nav>
-        <ul>
-            <li><img src="images/logo.png" alt="logo"></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#aboutus">About us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><form action="">
-                <input type="text" placeholder="Search.." name="search">
-                <button type="submit">Search</i></button>
-              </form>
-            </li>
-        </ul>
+        <div class="topnav">
+            <img src="images/logo.png" alt="logo" class="logoimg">
+            <a class="active" href="#home">Home</a>
+            <a href="#aboutus">About us</a>
+            <a href="#services">Services</a>
+            <a href="#team">Team</a>
+            <a href="#contact">Contact</a>
+            <div class="search-container">
+                <form action="">
+                    <input type="text" placeholder="Search.." name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+        </div>
     </nav>
     </header>
     <main>
         <div > 
-        <img src="images/main-banner.jpg" alt="main-banner" class="headimg">
+        <img src="images/main-banner.jpg" alt="main-banner" >
         </div>
         <div class="headimgtext">
-        <h1>Welcome to Three</h1>
-        <h1>Star Media</h1>
+        <h1>Welcome to Three Star</h1>
+        <br>
+        <h1>Media</h1>
+        <br>
+        <br>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est harum laudantium eos tempora explicabo iste ratione quod nam perspiciatis consequuntur beatae fuga quos facere, ipsam aspernatur.
         </p>
         <br>
         <form action="mainpage">
-            <button type="submit">Connect with us</i></button>
+            <button type="submit"><i class="fa fa-search"></i></button>
         </form>
         </div>
         <h1>About Us</h1>
