--- a/mtm6201/mtm6201-picture-this-master/index.html
+++ b/mtm6201/mtm6201-picture-this-master/index.html
@@ -15,10 +15,13 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
-    <!-- <img src="images/museum.jpg"
-    srcset="image-small.png 320w, image-medium.png 800w, image-large.png 1200w"
-    alt="Image description"> -->
+    <img src="images/museum.jpg" 
+    alt="placeholder"
+    srcset="images/museum-320.jpg 320w, 
+            images/museum-480.jpg 480w, 
+            images/museum-720.jpg 720w,
+            images/museum-960.jpg 960w"
+    sizes="(min-width: 960px) 50vw, 100vw">
   </header>
 </body>
 
