Image of musume

--- a/mtm6201/mtm6201-picture-this-master/index.html
+++ b/mtm6201/mtm6201-picture-this-master/index.html
@@ -16,7 +16,7 @@
       <h4>My Really Cool Blog Post</h4>
     </div>
     <img src="images/museum.jpg" 
-    alt="placeholder"
+    alt="IMAGE OF museum"
     srcset="images/museum-320.jpg 320w, 
             images/museum-480.jpg 480w, 
             images/museum-720.jpg 720w,
