--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -58,22 +58,22 @@
         <p><b>See how much you can earn with Dash.</b></p>
         <p>how many hours do you want to drive with us this week?</p>
             <form action="calculate_hours">
-                <div>
+                <div> 
                     <input type="text" id="fname" name="fname" value="Hours">
                 </div>
                 <div>
                     <input type="text" id="lname" name="lname" value="City">
                 </div>
-                <div>
+                <div id="submit"> 
                     <input type="submit" value="Calculate">
                 </div>
-              </form> 
-        </div>
-        <div class="socialmedia">
-            <img src="./images/icons/instagram.svg" alt="instagram">
-            <img src="./images/icons/twitter.svg" alt="twitter">
-            <img src="./images/icons/facebook.svg" alt="facebook">
-            <img src="./images/icons/linkedin.svg" alt="linkedin">
+            </form> 
+            <div class="socialmedia">
+                <img src="./images/icons/instagram.svg" alt="instagram">
+                <img src="./images/icons/twitter.svg" alt="twitter">
+                <img src="./images/icons/facebook.svg" alt="facebook">
+                <img src="./images/icons/linkedin.svg" alt="linkedin">
+            </div>
         </div>
     </footer>
 </body>
