--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -47,7 +47,7 @@
                     <input type="checkbox" name="terms" class="terms">
                     <span>I agree to Dash terms</span>
                 </div>
-                <button type="submit">DRIVE WITH US</button>
+                <button type="#">DRIVE WITH US</button>
                 <p>Already applied? <a href="#">Check your application status here</a></p>
             </form>
 
