--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -22,6 +22,9 @@
                 <br>own vehicle with Dash!
             </p> 
         </div>
+        <div>
+            <img src="./images/bg-image/scooter.svg" alt="scooter">
+        </div>
      
         <div class="contacthead">
             <h2>Apply Now</h2>
