--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -21,7 +21,7 @@
                 <br>own vehicle with Dash!
             </p> 
         </div>
-        <div>
+        <div class="mimg">
             <img src="./images/bg-image/scooter.svg" alt="scooter">
         </div>
      
