--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<!-- Header Section of page  -->
     <header class="headlogo">
         <img src="./images/logo/logo.png" alt="logo">
     </header>
+<!-- Main Section  Of page -->
     <main class="pmain">
         <div class="pagehead">
             <h1>Want to be</h1>
@@ -29,6 +31,7 @@
             <h2>Apply Now</h2>
             <p>Enter your info below to get started.</p>
             <form action="apply">
+<!-- Div used so property can be assigned easily -->
                 <div>
                     <label for="fname"></label>
                     <input type="text" name="fname" id="fname" placeholder="First Name">
@@ -54,12 +57,13 @@
             </form>
 
     </main>
-
+<!-- Footer Section of Page -->
     <footer class="footer">
         <div class="footerform">
         <p><b>See how much you can earn with Dash.</b></p>
         <p>how many hours do you want to drive with us this week?</p>
             <form action="calculate_hours">
+<!-- Div used so property can be assigned easily -->
                 <div> 
                     <input type="text" id="fname" name="fname" value="Hours">
                 </div>
