--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -17,6 +17,10 @@
                         <li><a href="#Products">PRODUCTS</a></li>
                         <li><a href="#About Us">ABOUT US</a></li>
                         <li><a href="#Contact Us">CONTACT US</a></li>
+                        <li><a href="./index.html">HOME</a></li>
+                        <li><a href="#Products">PRODUCTS</a></li>
+                        <li><a href="#About Us">ABOUT US</a></li>
+                        <li><a href="#Contact Us">CONTACT US</a></li>
                     </ol>
             </nav>
         </div>
