--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Prototype</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Ice-Cream Shop</title>
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
-    <head>
-        <img src="./img/logo.png" alt="">
-        <div class="headnav">
-            <nav>
-                    <ol>
-                        <li><a href="./index.html">HOME</a></li>
-                        <li><a href="#Products">PRODUCTS</a></li>
-                        <li><a href="#About Us">ABOUT US</a></li>
-                        <li><a href="#Contact Us">CONTACT US</a></li>
-                        <li><a href="./index.html">HOME</a></li>
-                        <li><a href="#Products">PRODUCTS</a></li>
-                        <li><a href="#About Us">ABOUT US</a></li>
-                        <li><a href="#Contact Us">CONTACT US</a></li>
-                    </ol>
-            </nav>
-        </div>
-    </head>
-    <main>
-        <div class="homeimg">
-            <img src="./img/homeimg960.png" alt="Ice-cream">
-        </div>
-        <div class="hometext">
-            <h2 class="aboutus">About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus euismod quis viverra nibh cras. Vel risus commodo viverra maecenas accumsan lacus. Mauris pharetra et ultrices neque. Nulla pharetra diam sit amet nisl. Convallis a cras semper auctor neque vitae tempus. In hac habitasse platea dictumst quisque sagittis. Imperdiet nulla malesuada pellentesque elit eget. Volutpat commodo sed egestas egestas fringilla phasellus faucibus. Id porta nibh venenatis cras sed felis eget velit aliquet. Dignissim cras tincidunt lobortis feugiat vivamus.
-            Feugiat nisl pretium fusce id velit. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Elementum nibh tellus molestie nunc non blandit massa enim. Pretium lectus quam id leo in vitae. Blandit massa enim nec dui. Donec massa sapien faucibus et molestie. Velit laoreet id donec ultrices tincidunt arcu. Amet est placerat in egestas erat imperdiet. Pretium aenean pharetra magna ac. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Vitae justo eget magna fermentum iaculis eu. Quis viverra nibh cras pulvinar.</p>
-        </div>
-        <button type="button">Order Now</button>
-    </main>
-    <footer>
-        <div class="footer">
+	<div class="navbar">
+		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
+		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a> 
+		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a> 
+		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+	</div>
+	<div class="container">
+		<div class="image-box">
+			<img src="./img/shop-logo.jpg" width="80%" height="80%"/>
+		</div>
+		<div class="message-box">
+			<div class="header">Trupti Ice-Cream </div>
+			<img class="tagline" src="./img/tagline.jpg" width="150px" height="150px"/>
+			<div class="shore-details">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore illo possimus corporis modi, laboriosam nulla facere exercitationem dolorum sunt ut, nostrum at a dicta explicabo rem dolores, ducimus suscipit.
+				Aspernatur, molestias dolorem ab in corporis eveniet numquam recusandae similique qui mollitia. Voluptatibus, reprehenderit quibusdam. Maxime enim asperiores at, totam illum sed et quibusdam reiciendis, natus deserunt facere, iusto ex!
+				Aliquid doloremque quod porro suscipit nulla, fugiat explicabo aperiam numquam error adipisci nihil asperiores! Est quo, doloremque ipsam odio doloribus nisi! Nihil aspernatur nam animi porro id, soluta et consequatur!
+				Doloribus voluptatem quos maxime. Et alias quae aperiam unde quaerat aut quos dolorem ad nam, facere quasi autem perferendis ullam tempore accusamus maxime dicta culpa itaque nesciunt consequuntur iusto suscipit?
+				Minus vero accusantium sed, dignissimos sapiente dicta debitis voluptatibus harum. Qui cumque veritatis repellendus officiis vero, deserunt saepe? Dicta, dolor. Est quisquam minima possimus quas ullam magnam eum voluptates cupiditate?
+				Doloribus maiores, facere pariatur assumenda tenetur eum esse officiis quisquam dolor molestias quam possimus omnis hic quia maxime aliquam similique consequatur est? Repellendus nesciunt nemo veniam quae aperiam et. Cum.
+				Eum iusto tempore officia, nemo et ea corporis impedit est voluptate fugit itaque ratione unde facilis perferendis explicabo optio, quam distinctio dolores obcaecati numquam ut eaque voluptas! Velit, nobis recusandae.
 
+				<button type="submit">Order Now</button>
+			</div>
+		</div>
+	</div>
 
-        </div>
+	<div class="footer">
+		<div style="text-align: center; height: 80%;">
+			<i class="fa fa-fw fa-instagram" "></i>
+			<i class="fa fa-fw fa-facebook"></i>
+			<i class="fa fa-fw fa-youtube"></i>
+			<i class="fa fa-fw fa-twitter"></i>
+			<i class="fa fa-fw fa-github"></i>
+		</div>
+		<div style="text-align: center;">&copy;copywrite 2021</div>
+		
+	</div>
 
-    </footer>
-    
+	
+	  
 </body>
 </html>
